--- a/lab/anls.html
+++ b/lab/anls.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Análise Molecular - LABMANIA</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -138,14 +139,15 @@
         }
 
         .analysis-workspace {
-            background: var(--fundo-card);
-            border-radius: 12px;
-            padding: 20px;
+            background: linear-gradient(135deg, var(--fundo-card), rgba(22, 33, 62, 0.9));
+            border-radius: 20px;
+            padding: 25px;
             display: flex;
             flex-direction: column;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-            border: 1px solid rgba(247, 37, 133, 0.3);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
+            border: 2px solid rgba(247, 37, 133, 0.4);
             position: relative;
+            backdrop-filter: blur(15px);
         }
 
         .panel-header {
