--- a/lab/lab-astro.html
+++ b/lab/lab-astro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratório de Astronomia - LABMANIA</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -251,17 +252,17 @@
         }
 
         .section-card {
-            background: var(--fundo-card);
-            border-radius: 20px;
-            padding: 30px;
+            background: linear-gradient(135deg, var(--fundo-card), rgba(22, 33, 62, 0.8));
+            border-radius: 25px;
+            padding: 35px;
             position: relative;
             overflow: hidden;
             cursor: pointer;
-            transition: all 0.4s ease;
-            border: 2px solid transparent;
-            backdrop-filter: blur(15px);
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-            min-height: 350px;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+            border: 2px solid rgba(247, 37, 133, 0.3);
+            backdrop-filter: blur(20px);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
+            min-height: 380px;
             display: flex;
             flex-direction: column;
         }
