--- a/mania/newsmania-modern.html
+++ b/mania/newsmania-modern.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NewsMANIA - Notícias Científicas</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -459,6 +460,7 @@
         </div>
         <nav>
             <a href="/dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
+            <a onclick="window.openFavoritesModal?.()" style="cursor: pointer;"><i class="fas fa-bookmark"></i> Favoritos</a>
             <a href="/submit-news-dynamic.html" class="submit-news-btn">
                 <i class="fas fa-plus"></i> Enviar Notícia
             </a>
@@ -786,5 +788,8 @@
             }
         });
     </script>
+
+    <!-- Sistema de Interações -->
+    <script type="module" src="/js/init-interactions.js"></script>
 </body>
 </html>
