--- a/lab/reaquim.html
+++ b/lab/reaquim.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reações Químicas Interativas - LABMANIA</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -266,11 +267,12 @@
         .lab-bench {
             position: relative;
             width: 100%;
-            height: 350px;
-            background: linear-gradient(to bottom, #8B4513 0%, #654321 100%);
-            border-radius: 10px;
-            margin-bottom: 20px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            height: 380px;
+            background: linear-gradient(135deg, #8B4513 0%, #654321 50%, #8B4513 100%);
+            border-radius: 20px;
+            margin-bottom: 25px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.4);
+            border: 2px solid rgba(247, 37, 133, 0.3);
         }
 
         /* Bico de Bunsen - CORRIGIDO Z-INDEX */
