--- a/lab/sin.html
+++ b/lab/sin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Síntese de Compostos - LABMANIA</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -260,12 +261,13 @@
         .synthesis-workspace {
             position: relative;
             width: 100%;
-            height: 400px;
-            background: linear-gradient(to bottom, #2c3e50 0%, #34495e 100%);
-            border-radius: 15px;
-            margin-bottom: 20px;
-            box-shadow: inset 0 5px 15px rgba(0, 0, 0, 0.3);
+            height: 450px;
+            background: linear-gradient(135deg, #2c3e50 0%, #34495e 50%, #2c3e50 100%);
+            border-radius: 20px;
+            margin-bottom: 25px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.4), inset 0 2px 10px rgba(255, 255, 255, 0.1);
             overflow: hidden;
+            border: 2px solid rgba(247, 37, 133, 0.3);
         }
 
         .synthesis-station {
