--- a/mania/spacemania-modern.html
+++ b/mania/spacemania-modern.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPACEMANIA - Exploração Espacial</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -545,6 +546,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import '/js/init-interactions.js';
         import '/js/shared-utils.js';
         import '/js/interaction-utils.js';
 
