--- a/mania/sportmania-modern.html
+++ b/mania/sportmania-modern.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SPORTMANIA - Ciência Esportiva</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
@@ -286,6 +287,122 @@
             left: 0;
             top: 0;
             width: 100%; /* Full width */
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.9);
+            backdrop-filter: blur(10px);
+        }
+
+        .modal-content {
+            background: linear-gradient(135deg, var(--fundo) 0%, var(--card-fundo) 100%);
+            margin: 5% auto;
+            padding: 2rem;
+            border: 2px solid var(--destaque);
+            border-radius: 20px;
+            width: 90%;
+            max-width: 800px;
+            box-shadow: 0 0 30px rgba(230, 57, 70, 0.4);
+        }
+
+        .modal-close {
+            color: var(--destaque);
+            float: right;
+            font-size: 2rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .modal-close:hover {
+            color: var(--sport-orange);
+            transform: scale(1.2);
+        }
+
+        .modal-interactions {
+            display: flex;
+            gap: 1rem;
+            margin: 2rem 0;
+            padding: 1.5rem;
+            background: rgba(230, 57, 70, 0.05);
+            border-radius: 15px;
+            border: 1px solid rgba(230, 57, 70, 0.2);
+        }
+
+        .modal-interactions button {
+            flex: 1;
+            background: linear-gradient(45deg, var(--destaque), var(--sport-orange));
+            border: none;
+            color: white;
+            padding: 1rem;
+            border-radius: 12px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            font-size: 1rem;
+        }
+
+        .modal-interactions button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 20px rgba(230, 57, 70, 0.5);
+        }
+
+        .modal-interactions button i {
+            font-size: 1.2rem;
+        }
+
+        .like-count {
+            font-weight: 700;
+            color: var(--destaque);
+        }
+
+        .comment-item {
+            background: rgba(0, 0, 0, 0.3);
+            padding: 1rem;
+            border-radius: 12px;
+            margin-bottom: 1rem;
+            border: 1px solid rgba(230, 57, 70, 0.2);
+        }
+
+        .comment-header {
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            margin-bottom: 0.8rem;
+        }
+
+        .comment-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: linear-gradient(135deg, var(--destaque), var(--sport-orange));
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 700;
+            color: white;
+        }
+
+        .comment-author {
+            font-weight: 600;
+            color: var(--destaque);
+        }
+
+        .comment-date {
+            font-size: 0.85rem;
+            color: var(--sport-blue);
+            opacity: 0.8;
+        }
+
+        .comment-text {
+            color: var(--texto-claro);
+            line-height: 1.6;
+        }
+
+        /* Modal width */
             height: 100%; /* Full height */
             overflow: auto; /* Enable scroll if needed */
             background-color: rgba(0, 0, 0, 0.7);
@@ -505,6 +622,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import '/js/init-interactions.js';
 
         let currentArticles = [];
         let filteredArticles = [];
