--- a/paginainicial.html
+++ b/paginainicial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FATOMANIA | Curiosidades Científicas Incríveis</title>
+    <link rel="icon" type="image/png" href="/icon/fatomania.png">
     <meta name="description" content="Descubra fatos científicos surpreendentes que vão explodir sua mente! Mais de 1.000 curiosidades verificadas por especialistas.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
