--- a/mania/newsmania-modern.html
+++ b/mania/newsmania-modern.html
@@ -461,7 +461,7 @@
         <nav>
             <a href="/dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
             <a onclick="window.openFavoritesModal?.()" style="cursor: pointer;"><i class="fas fa-bookmark"></i> Favoritos</a>
-            <a href="/submit-news-dynamic.html" class="submit-news-btn">
+            <a href="/submit-news.html" class="submit-news-btn">
                 <i class="fas fa-plus"></i> Enviar Notícia
             </a>
         </nav>
